--- a/apps/landing/project.json
+++ b/apps/landing/project.json
@@ -82,9 +82,7 @@
       "executor": "nx:run-commands",
       "options": {
         "commands": [
-          "docker build -f apps/landing/Dockerfile -t ethanelliottio/landing:{args.tag} -t ethanelliottio/landing:latest .",
-          "docker push ethanelliottio/landing:{args.tag}",
-          "docker push ethanelliottio/landing:latest"
+          "VERSION=$(git describe --tags --match 'landing@*' --abbrev=0 | sed 's/landing@//') && docker build -f apps/landing/Dockerfile -t ethanelliottio/landing:$VERSION -t ethanelliottio/landing:latest . && docker push ethanelliottio/landing:$VERSION && docker push ethanelliottio/landing:latest"
         ],
         "parallel": false
       }
