--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "crypto-js": "^4.2.0",
     "csv-parse": "^6.1.0",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.19",
+    "ejs": "^3.1.10",
+    "express": "^5.2.1",
     "fastify": "~5.2.1",
     "fastify-graceful-shutdown": "^4.0.1",
     "fastify-metrics": "^12.1.0",
@@ -57,10 +60,13 @@
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "ng2-charts": "^8.0.0",
+    "node-cron": "^4.2.1",
     "pino-pretty": "^13.1.1",
     "prom-client": "^15.1.3",
+    "puppeteer": "^24.34.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "~7.8.2",
+    "sqlite3": "^5.1.7",
     "tslib": "^2.8.1",
     "typeorm": "^0.3.25",
     "zod": "^3.25.51"
@@ -92,9 +98,12 @@
     "@swc/helpers": "~0.5.17",
     "@types/bcrypt": "^6.0.0",
     "@types/crypto-js": "^4.2.2",
+    "@types/express": "^5.0.6",
     "@types/http-errors": "^2.0.5",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "18.16.9",
+    "@types/node-cron": "^3.0.11",
+    "@types/sqlite3": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "7.18.0",
     "@typescript-eslint/parser": "7.18.0",
     "@typescript-eslint/utils": "7.18.0",
