--- a/apps/aritzia-scanner/Dockerfile
+++ b/apps/aritzia-scanner/Dockerfile
@@ -16,6 +16,9 @@ WORKDIR /app
 
 COPY dist/apps/aritzia-scanner .
 
+ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
+    PUPPETEER_EXECUTABLE_PATH=/usr/bin/google-chrome-stable
+
 # Install dependencies
 RUN npm install --omit=dev
 
