--- a/deployments/wheel/Chart.yaml
+++ b/deployments/wheel/Chart.yaml
@@ -3,4 +3,4 @@ name: wheel
 description: Randomizer Wheel Application Helm Chart
 type: application
 version: 1.0.0
-appVersion: "1.0.0"
+appVersion: '1.0.0'
