--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,11 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
       - uses: oven-sh/setup-bun@v2
-        with:
-          bun-version: latest
-      - run: bun install
+
+      - name: Install dependencies
+        run: bun install --no-save
 
       - name: Lint & Build
         run: bun nx affected -t lint build
