--- a/package.json
+++ b/package.json
@@ -28,16 +28,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "20.1.4",
-    "@angular/cdk": "20.1.4",
-    "@angular/common": "20.1.4",
-    "@angular/compiler": "20.1.4",
-    "@angular/core": "20.1.4",
-    "@angular/forms": "20.1.4",
-    "@angular/material": "~20.1.4",
-    "@angular/platform-browser": "20.1.4",
-    "@angular/platform-browser-dynamic": "20.1.4",
-    "@angular/router": "20.1.4",
+    "@angular/animations": "21.0.6",
+    "@angular/cdk": "21.0.5",
+    "@angular/common": "21.0.6",
+    "@angular/compiler": "21.0.6",
+    "@angular/core": "21.0.6",
+    "@angular/forms": "21.0.6",
+    "@angular/material": "21.0.5",
+    "@angular/platform-browser": "21.0.6",
+    "@angular/platform-browser-dynamic": "21.0.6",
+    "@angular/router": "21.0.6",
     "@fastify/autoload": "~6.0.3",
     "@fastify/circuit-breaker": "^4.0.2",
     "@fastify/cors": "^11.0.1",
@@ -55,7 +55,7 @@
     "@fortawesome/free-regular-svg-icons": "^7.0.0",
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@ngrx/signals": "^20.0.0",
-    "@nx/angular": "21.3.11",
+    "@nx/angular": "22.3.3",
     "@scalar/fastify-api-reference": "^1.31.4",
     "@simplewebauthn/browser": "^13.1.2",
     "@simplewebauthn/server": "^13.1.2",
@@ -90,26 +90,26 @@
     "zod": "^3.25.51"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "20.1.4",
-    "@angular-devkit/core": "20.1.4",
-    "@angular-devkit/schematics": "20.1.4",
-    "@angular-eslint/eslint-plugin": "20.1.1",
-    "@angular-eslint/eslint-plugin-template": "20.1.1",
-    "@angular-eslint/template-parser": "20.1.1",
-    "@angular/build": "20.1.4",
-    "@angular/cli": "~20.1.0",
-    "@angular/compiler-cli": "20.1.4",
-    "@angular/language-service": "20.1.4",
+    "@angular-devkit/build-angular": "21.0.4",
+    "@angular-devkit/core": "21.0.4",
+    "@angular-devkit/schematics": "21.0.4",
+    "@angular-eslint/eslint-plugin": "21.1.0",
+    "@angular-eslint/eslint-plugin-template": "21.1.0",
+    "@angular-eslint/template-parser": "21.1.0",
+    "@angular/build": "21.0.4",
+    "@angular/cli": "21.0.4",
+    "@angular/compiler-cli": "21.0.6",
+    "@angular/language-service": "21.0.6",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.32.0",
-    "@nx/esbuild": "21.3.11",
-    "@nx/eslint": "21.3.11",
-    "@nx/eslint-plugin": "21.3.11",
-    "@nx/js": "21.3.11",
-    "@nx/node": "21.3.11",
-    "@nx/web": "21.3.11",
-    "@nx/workspace": "21.3.11",
-    "@schematics/angular": "20.1.4",
+    "@nx/esbuild": "22.3.3",
+    "@nx/eslint": "22.3.3",
+    "@nx/eslint-plugin": "22.3.3",
+    "@nx/js": "22.3.3",
+    "@nx/node": "22.3.3",
+    "@nx/web": "22.3.3",
+    "@nx/workspace": "22.3.3",
+    "@schematics/angular": "21.0.4",
     "@swc-node/register": "~1.9.2",
     "@swc/core": "~1.5.29",
     "@swc/helpers": "~0.5.17",
@@ -128,11 +128,11 @@
     "esbuild": "^0.19.2",
     "eslint": "~8.57.1",
     "eslint-config-prettier": "10.1.5",
-    "nx": "21.3.11",
+    "nx": "22.3.3",
     "postcss": "^8.5.3",
     "prettier": "^2.8.8",
     "ts-node": "10.9.1",
-    "typescript": "5.8.3"
+    "typescript": "5.9.3"
   },
   "nx": {
     "includedScripts": []
