--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Dev CI
 
 on:
   push:
@@ -8,10 +8,41 @@ on:
 
 permissions:
   actions: read
-  contents: write
+  contents: read
 
 jobs:
-  main:
+  # Check if this is a release commit - if so, skip this workflow
+  check-skip:
+    runs-on: ubuntu-latest
+    outputs:
+      should_skip: ${{ steps.check.outputs.should_skip }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
+
+      - name: Check if release commit
+        id: check
+        run: |
+          if [ "${{ github.event_name }}" = "push" ]; then
+            COMMIT_MSG=$(git log -1 --pretty=%B)
+            echo "Commit message: $COMMIT_MSG"
+            
+            # Check if commit message starts with "chore(release): publish" (works with squash merge)
+            if [[ "$COMMIT_MSG" == chore\(release\):\ publish* ]]; then
+              echo "should_skip=true" >> $GITHUB_OUTPUT
+              echo "This is a release commit - skipping Dev CI"
+            else
+              echo "should_skip=false" >> $GITHUB_OUTPUT
+            fi
+          else
+            echo "should_skip=false" >> $GITHUB_OUTPUT
+          fi
+
+  lint-and-build:
+    needs: check-skip
+    if: needs.check-skip.outputs.should_skip != 'true'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -23,30 +54,53 @@ jobs:
       - name: Install dependencies
         run: bun install --no-save
 
-      - name: Lint & Build
-        run: bun nx affected -t lint build
+      - name: Lint
+        run: bun nx affected -t lint
+
+      - name: Build
+        run: bun nx affected -t build
+
+  build-and-push-dev:
+    needs: [check-skip, lint-and-build]
+    if: |
+      needs.check-skip.outputs.should_skip != 'true' &&
+      github.event_name == 'push' &&
+      github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - uses: oven-sh/setup-bun@v2
+
+      - name: Install dependencies
+        run: bun install --no-save
+
+      - name: Build affected projects
+        run: bun nx affected -t build
 
       - name: Docker Login
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Setup Git
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      - name: Build & Push Development Containers
         run: |
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git config --global user.name "github-actions[bot]"
+          echo "Building and pushing development containers with 'latest' tag..."
 
-      - name: Release
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        run: |
-          bun nx release --skip-publish
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # Get list of affected apps with container targets
+          APPS=$(ls -d apps/*/ | xargs -n 1 basename)
 
-      - name: Build & Push Containers
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        run: |
-          bun nx run-many -t container
+          for APP in $APPS; do
+            # Check if app has container target
+            if bun nx show project $APP --json 2>/dev/null | grep -q '"container"'; then
+              echo "Building $APP:latest..."
+              bun nx run $APP:container --tag=latest || echo "⚠️  Failed to build $APP, continuing..."
+            fi
+          done
+
+          echo "✅ Development containers built and pushed successfully"
