--- a/apps/aritzia-scanner/project.json
+++ b/apps/aritzia-scanner/project.json
@@ -75,9 +75,14 @@
       "executor": "nx:run-commands",
       "options": {
         "commands": [
-          "VERSION=$(git describe --tags --match 'aritzia-scanner@*' --abbrev=0 | sed 's/aritzia-scanner@//') && docker build -f apps/aritzia-scanner/Dockerfile -t ethanelliottio/aritzia-scanner:$VERSION -t ethanelliottio/aritzia-scanner:latest . && docker push ethanelliottio/aritzia-scanner:$VERSION && docker push ethanelliottio/aritzia-scanner:latest"
+          "TAG={args.tag} && docker build -f apps/aritzia-scanner/Dockerfile -t ethanelliottio/aritzia-scanner:$TAG . && docker push ethanelliottio/aritzia-scanner:$TAG"
         ],
         "parallel": false
+      },
+      "configurations": {
+        "latest": {
+          "tag": "latest"
+        }
       }
     }
   }
