--- a/.github/workflows/execute-release.yml
+++ b/.github/workflows/execute-release.yml
@@ -65,7 +65,7 @@ jobs:
       - name: Create and push git tags
         run: |
           echo "Creating git tags for released versions..."
-          bun tsx tools/scripts/publish-release.ts
+          bun tools/scripts/publish-release.ts
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
