--- a/apps/wheel/Dockerfile
+++ b/apps/wheel/Dockerfile
@@ -1,24 +1,8 @@
-# Multi-stage build for Angular app
-FROM docker.io/node:lts-alpine as build
-
-WORKDIR /app
-
-# Copy package files for dependency installation
-COPY package*.json bun.lock ./
-
-# Install bun and dependencies
-RUN npm install -g bun
-RUN bun install --frozen-lockfile
-
-# Copy source code and build
-COPY . .
-RUN bun nx build wheel --prod
-
-# Production stage with nginx
+# Production build using pre-built Angular app from CI
 FROM docker.io/nginx:alpine
 
-# Copy built app to nginx html directory
-COPY --from=build /app/dist/apps/wheel/browser /usr/share/nginx/html
+# Copy pre-built app to nginx html directory
+COPY dist/apps/wheel/browser /usr/share/nginx/html
 
 # Expose port 80
 EXPOSE 80
