--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,10 +55,10 @@ jobs:
         run: bun install --no-save
 
       - name: Lint
-        run: bun nx affected -t lint
+        run: bun nx affected -t lint --parallel=3
 
       - name: Build
-        run: bun nx affected -t build
+        run: bun nx affected -t build --parallel=3
 
   build-and-push-dev:
     needs: [check-skip, lint-and-build]
@@ -80,7 +80,7 @@ jobs:
         run: bun install --no-save
 
       - name: Build affected projects
-        run: bun nx affected -t build
+        run: bun nx affected -t build --parallel=3
 
       - name: Docker Login
         uses: docker/login-action@v3
