feat(ci): add auto release type detection based on conventional commits
- Add 'auto' option to prepare-release workflow (now default)
- Auto mode leverages Nx's built-in conventional commit analysis
- Add validation to ensure preid only used with prerelease type
- Default preid to 'rc' when prerelease selected without custom value
- Remove default 'rc' value from workflow input to make it truly optional

--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -8,16 +8,16 @@ on:
         required: true
         type: choice
         options:
+          - auto
           - patch
           - minor
           - major
           - prerelease
-        default: 'patch'
+        default: 'auto'
       preid:
         description: 'Pre-release identifier (e.g., rc, alpha, beta) - only used with prerelease type'
         required: false
         type: string
-        default: 'rc'
 
 permissions:
   contents: write
