--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "dayjs": "^1.11.19",
     "ejs": "^3.1.10",
     "express": "^5.2.1",
-    "fastify": "~5.2.1",
+    "fastify": "^5.6.2",
     "fastify-graceful-shutdown": "^4.0.1",
     "fastify-metrics": "^12.1.0",
     "fastify-plugin": "~5.0.1",
@@ -130,7 +130,7 @@
     "@typescript-eslint/parser": "7.18.0",
     "@typescript-eslint/utils": "7.18.0",
     "autoprefixer": "^10.4.21",
-    "esbuild": "^0.19.2",
+    "esbuild": "^0.27.2",
     "eslint": "~8.57.1",
     "eslint-config-prettier": "10.1.5",
     "nx": "22.3.3",
