--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,16 +49,19 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: oven-sh/setup-bun@v2
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
 
       - name: Install dependencies
-        run: bun install --no-save
+        run: npm ci
 
       - name: Lint
-        run: bun nx affected -t lint --parallel=3
+        run: npx nx affected -t lint --parallel=3
 
       - name: Build
-        run: bun nx affected -t build --parallel=3
+        run: npx nx affected -t build --parallel=3
 
   build-and-push-dev:
     needs: [check-skip, lint-and-build]
@@ -74,10 +77,13 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: oven-sh/setup-bun@v2
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
 
       - name: Install dependencies
-        run: bun install --no-save
+        run: npm ci
 
       - name: Docker Login
         uses: docker/login-action@v3
@@ -88,5 +94,5 @@ jobs:
       - name: Build & Push Development Containers
         run: |
           echo "Building and pushing development containers with 'latest' tag..."
-          bun nx run-many -t container --tag=latest --parallel=3
+          npx nx run-many -t container --tag=latest --parallel=3
           echo "✅ Development containers built and pushed successfully"
