--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "unrs-resolver"
   ],
   "engines": {
-    "node": "24"
+    "node": ">=20.0.0"
   },
   "scripts": {
     "start": "nx serve",
@@ -123,7 +123,7 @@
     "@types/express": "^5.0.6",
     "@types/http-errors": "^2.0.5",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "18.16.9",
+    "@types/node": "^20.19.0",
     "@types/node-cron": "^3.0.11",
     "@types/sqlite3": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "7.18.0",
