--- a/apps/aritzia-scanner/tsconfig.app.json
+++ b/apps/aritzia-scanner/tsconfig.app.json
@@ -6,7 +6,8 @@
     "moduleResolution": "bundler",
     "types": ["node"],
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true
   },
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"],
   "include": ["src/**/*.ts"]
