--- a/apps/aritzia-scanner/Dockerfile
+++ b/apps/aritzia-scanner/Dockerfile
@@ -3,7 +3,7 @@ FROM node:20-slim
 
 # Install Chrome and dependencies for Puppeteer
 RUN apt-get update \
-    && apt-get install -y wget gnupg \
+    && apt-get install -y wget gnupg python3 make g++ \
     && wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | gpg --dearmor -o /usr/share/keyrings/googlechrome-linux-keyring.gpg \
     && sh -c 'echo "deb [arch=amd64 signed-by=/usr/share/keyrings/googlechrome-linux-keyring.gpg] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list' \
     && apt-get update \
@@ -11,13 +11,16 @@ RUN apt-get update \
       --no-install-recommends \
     && rm -rf /var/lib/apt/lists/*
 
-WORKDIR /app
-
-# Copy the pre-built application (includes package.json and node_modules from build)
-COPY dist/apps/aritzia-scanner .
-
 ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
     PUPPETEER_EXECUTABLE_PATH=/usr/bin/google-chrome-stable
+
+WORKDIR /app
+
+# Copy the pre-built application
+COPY dist/apps/aritzia-scanner .
+
+# Install runtime dependencies (express, puppeteer, sqlite3, etc.)
+RUN npm install --omit=dev
 
 # Add user so we don't need --no-sandbox
 RUN groupadd -r pptruser && useradd -r -g pptruser -G audio,video pptruser \
