--- a/deployments/wheel/templates/service.yaml
+++ b/deployments/wheel/templates/service.yaml
@@ -1,13 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: { { include "wheel.fullname" . } }
-  labels: { { - include "wheel.labels" . | nindent 4 } }
+  name: {{ include "wheel.fullname" . }}
+  labels:
+    {{- include "wheel.labels" . | nindent 4 }}
 spec:
-  type: { { .Values.service.type } }
+  type: {{ .Values.service.type }}
   ports:
-    - port: { { .Values.service.port } }
+    - port: {{ .Values.service.port }}
       targetPort: http
       protocol: TCP
       name: http
-  selector: { { - include "wheel.selectorLabels" . | nindent 4 } }
+  selector:
+    {{- include "wheel.selectorLabels" . | nindent 4 }}
