--- a/deployments/home-assistant/application.yaml
+++ b/deployments/home-assistant/application.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: wheel
-  namespace: argocd
+  name: home-assistant
+  namespace: elliott-haus
 spec:
-  project: default
+  project: elliott-haus
   source:
     repoURL: https://github.com/ethanelliott/ethanelliott.ca.git
+    path: deployments/home-assistant
     targetRevision: main
-    path: deployments/wheel
   destination:
     server: https://kubernetes.default.svc
     namespace: elliott-haus
