--- a/deployments/kube-state-metrics/templates/deployment.yaml
+++ b/deployments/kube-state-metrics/templates/deployment.yaml
@@ -1,41 +1,37 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: { { include "kube-state-metrics.fullname" . } }
-  labels: { { - include "kube-state-metrics.labels" . | nindent 4 } }
+  name: {{ include "kube-state-metrics.fullname" . }}
+  labels:
+    {{- include "kube-state-metrics.labels" . | nindent 4 }}
 spec:
-  replicas: { { .Values.replicaCount } }
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      { { - include "kube-state-metrics.selectorLabels" . | nindent 6 } }
+      {{- include "kube-state-metrics.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
-        { { - include "kube-state-metrics.selectorLabels" . | nindent 8 } }
+        {{- include "kube-state-metrics.selectorLabels" . | nindent 8 }}
     spec:
-      serviceAccountName:
-        {
-          {
-            .Values.serviceAccount.name | default (include "kube-state-metrics.fullname" .),
-          },
-        }
+      serviceAccountName: {{ .Values.serviceAccount.name | default (include "kube-state-metrics.fullname" .) }}
       securityContext:
         runAsNonRoot: true
         runAsUser: 65534
         fsGroup: 65534
       containers:
-        - name: { { .Chart.Name } }
-          image: '{{ .Values.image.repository }}:{{ .Values.image.tag }}'
-          imagePullPolicy: { { .Values.image.pullPolicy } }
+        - name: {{ .Chart.Name }}
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
             - --port={{ .Values.service.port }}
             - --telemetry-port={{ .Values.service.telemetryPort }}
           ports:
             - name: http-metrics
-              containerPort: { { .Values.service.port } }
+              containerPort: {{ .Values.service.port }}
               protocol: TCP
             - name: telemetry
-              containerPort: { { .Values.service.telemetryPort } }
+              containerPort: {{ .Values.service.telemetryPort }}
               protocol: TCP
           livenessProbe:
             httpGet:
@@ -51,4 +47,5 @@ spec:
             initialDelaySeconds: 5
             periodSeconds: 10
             timeoutSeconds: 5
-          resources: { { - toYaml .Values.resources | nindent 12 } }
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
