--- a/deployments/kube-state-metrics/templates/service.yaml
+++ b/deployments/kube-state-metrics/templates/service.yaml
@@ -1,20 +1,22 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: { { include "kube-state-metrics.fullname" . } }
-  labels: { { - include "kube-state-metrics.labels" . | nindent 4 } }
+  name: {{ include "kube-state-metrics.fullname" . }}
+  labels:
+    {{- include "kube-state-metrics.labels" . | nindent 4 }}
   annotations:
-    prometheus.io/scrape: 'true'
-    prometheus.io/port: '{{ .Values.service.port }}'
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "{{ .Values.service.port }}"
 spec:
-  type: { { .Values.service.type } }
+  type: {{ .Values.service.type }}
   ports:
-    - port: { { .Values.service.port } }
+    - port: {{ .Values.service.port }}
       targetPort: http-metrics
       protocol: TCP
       name: http-metrics
-    - port: { { .Values.service.telemetryPort } }
+    - port: {{ .Values.service.telemetryPort }}
       targetPort: telemetry
       protocol: TCP
       name: telemetry
-  selector: { { - include "kube-state-metrics.selectorLabels" . | nindent 4 } }
+  selector:
+    {{- include "kube-state-metrics.selectorLabels" . | nindent 4 }}
