--- a/deployments/grafana/templates/configmap-dashboards.yaml
+++ b/deployments/grafana/templates/configmap-dashboards.yaml
@@ -303,7 +303,7 @@ data:
           "targets": [
             {
               "expr": "1 - avg by (instance) (rate(node_cpu_seconds_total{mode=\"idle\"}[5m]))",
-              "legendFormat": "{{instance}}",
+              "legendFormat": "{{"{{"}}instance{{"}}"}}",
               "refId": "A"
             }
           ]
@@ -386,7 +386,7 @@ data:
           "targets": [
             {
               "expr": "1 - (node_memory_MemAvailable_bytes / node_memory_MemTotal_bytes)",
-              "legendFormat": "{{instance}}",
+              "legendFormat": "{{"{{"}}instance{{"}}"}}",
               "refId": "A"
             }
           ]
@@ -469,7 +469,7 @@ data:
           "targets": [
             {
               "expr": "topk(10, sum by (pod) (container_memory_working_set_bytes{container!=\"\", container!=\"POD\"}))",
-              "legendFormat": "{{pod}}",
+              "legendFormat": "{{"{{"}}pod{{"}}"}}",
               "refId": "A"
             }
           ]
@@ -552,7 +552,7 @@ data:
           "targets": [
             {
               "expr": "topk(10, sum by (pod) (rate(container_cpu_usage_seconds_total{container!=\"\", container!=\"POD\"}[5m])))",
-              "legendFormat": "{{pod}}",
+              "legendFormat": "{{"{{"}}pod{{"}}"}}",
               "refId": "A"
             }
           ]
@@ -613,7 +613,7 @@ data:
           "targets": [
             {
               "expr": "(kubelet_volume_stats_used_bytes / kubelet_volume_stats_capacity_bytes)",
-              "legendFormat": "{{persistentvolumeclaim}}",
+              "legendFormat": "{{"{{"}}persistentvolumeclaim{{"}}"}}",
               "refId": "A"
             }
           ]
@@ -696,7 +696,7 @@ data:
           "targets": [
             {
               "expr": "topk(10, sum by (pod) (rate(container_network_receive_bytes_total[5m])))",
-              "legendFormat": "{{pod}}",
+              "legendFormat": "{{"{{"}}pod{{"}}"}}",
               "refId": "A"
             }
           ]
@@ -779,7 +779,7 @@ data:
           "targets": [
             {
               "expr": "topk(10, sum by (pod) (rate(container_network_transmit_bytes_total[5m])))",
-              "legendFormat": "{{pod}}",
+              "legendFormat": "{{"{{"}}pod{{"}}"}}",
               "refId": "A"
             }
           ]
