fix: prom uid reference

--- a/deployments/grafana/templates/configmap-datasources.yaml
+++ b/deployments/grafana/templates/configmap-datasources.yaml
@@ -10,6 +10,7 @@ data:
     datasources:
       - name: Prometheus
         type: prometheus
+        uid: prometheus
         access: proxy
         url: {{ .Values.prometheus.url }}
         isDefault: true
