--- a/deployments/grafana/templates/configmap-dashboards.yaml
+++ b/deployments/grafana/templates/configmap-dashboards.yaml
@@ -275,7 +275,7 @@ data:
                   }
                 ]
               },
-              "unit": "percentunit"
+              "unit": "short"
             },
             "overrides": []
           },
@@ -302,7 +302,7 @@ data:
           "type": "timeseries",
           "targets": [
             {
-              "expr": "1 - avg by (instance) (rate(node_cpu_seconds_total{mode=\"idle\"}[5m]))",
+              "expr": "sum by (instance) (rate(container_cpu_usage_seconds_total{id=\"/\", job=\"kubernetes-nodes-cadvisor\"}[5m]))",
               "legendFormat": "{{"{{"}}instance{{"}}"}}",
               "refId": "A"
             }
@@ -358,7 +358,7 @@ data:
                   }
                 ]
               },
-              "unit": "percentunit"
+              "unit": "bytes"
             },
             "overrides": []
           },
@@ -385,7 +385,7 @@ data:
           "type": "timeseries",
           "targets": [
             {
-              "expr": "1 - (node_memory_MemAvailable_bytes / node_memory_MemTotal_bytes)",
+              "expr": "sum by (instance) (container_memory_working_set_bytes{id=\"/\", job=\"kubernetes-nodes-cadvisor\"})",
               "legendFormat": "{{"{{"}}instance{{"}}"}}",
               "refId": "A"
             }
