feat(monitoring): add Node.js service metrics scraping and dashboard
- Add prometheus annotations to finances and test-server deployments
  for automatic metrics discovery (scrape, port, path)
- Add Node.js Services Grafana dashboard with:
  - Service overview (request rate, response time, error rate, P99)
  - Request metrics by service, method, and status code
  - Latency percentile distribution (P50/P90/P95/P99)
  - Node.js runtime metrics (heap, event loop, handles)
  - Garbage collection monitoring
  - Endpoint-level request rate breakdown

--- a/deployments/finances/templates/deployment.yaml
+++ b/deployments/finances/templates/deployment.yaml
@@ -13,6 +13,10 @@ spec:
     metadata:
       labels:
         {{- include "finances.selectorLabels" . | nindent 8 }}
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "{{ .Values.service.port }}"
+        prometheus.io/path: "/metrics"
     spec:
       containers:
         - name: {{ .Chart.Name }}
