--- a/deployments/test-server/templates/deployment.yaml
+++ b/deployments/test-server/templates/deployment.yaml
@@ -1,27 +1,30 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: { { include "test-server.fullname" . } }
-  labels: { { - include "test-server.labels" . | nindent 4 } }
+  name: {{ include "test-server.fullname" . }}
+  labels:
+    {{- include "test-server.labels" . | nindent 4 }}
 spec:
-  replicas: { { .Values.replicaCount } }
+  replicas: {{ .Values.replicaCount }}
   selector:
-    matchLabels: { { - include "test-server.selectorLabels" . | nindent 6 } }
+    matchLabels:
+      {{- include "test-server.selectorLabels" . | nindent 6 }}
   template:
     metadata:
-      labels: { { - include "test-server.selectorLabels" . | nindent 8 } }
+      labels:
+        {{- include "test-server.selectorLabels" . | nindent 8 }}
       annotations:
-        prometheus.io/scrape: 'true'
-        prometheus.io/port: '{{ .Values.service.port }}'
-        prometheus.io/path: '/metrics'
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "{{ .Values.service.port }}"
+        prometheus.io/path: "/metrics"
     spec:
       containers:
-        - name: { { .Chart.Name } }
-          image: '{{ .Values.image.repository }}:{{ .Values.image.tag }}'
-          imagePullPolicy: { { .Values.image.pullPolicy } }
+        - name: {{ .Chart.Name }}
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: { { .Values.service.port } }
+              containerPort: {{ .Values.service.port }}
               protocol: TCP
           livenessProbe:
             httpGet:
@@ -35,11 +38,12 @@ spec:
               port: http
             initialDelaySeconds: 5
             periodSeconds: 5
-          resources: { { - toYaml .Values.resources | nindent 12 } }
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
           env:
             - name: NODE_ENV
-              value: 'production'
+              value: "production"
             - name: HOST
-              value: '0.0.0.0'
+              value: "0.0.0.0"
             - name: PORT
-              value: '{{ .Values.service.port }}'
+              value: "{{ .Values.service.port }}"
