refactor(grafana): split dashboards into separate JSON files
- Extract each dashboard into individual JSON file in dashboards/ folder
- Create one ConfigMap per dashboard to avoid size limits (1MB max)
- Use Helm Files.Glob to dynamically discover and load all dashboards
- Use projected volume to mount multiple ConfigMaps into single directory
- Add comprehensive MONITORING_SETUP.md documentation

Dashboards included:
- k8s-cluster-overview.json: Kubernetes cluster monitoring
- nodejs-services.json: Node.js/Fastify service metrics

This architecture allows:
- Easy addition of new dashboards (just add JSON files)
- No ConfigMap size concerns (one per dashboard)
- Better version control (diff-friendly JSON files)
- Cleaner Helm templates

--- a/deployments/grafana/templates/deployment.yaml
+++ b/deployments/grafana/templates/deployment.yaml
@@ -71,5 +71,11 @@ spec:
           configMap:
             name: {{ include "grafana.fullname" . }}-dashboards-provider
         - name: grafana-dashboards
-          configMap:
-            name: {{ include "grafana.fullname" . }}-dashboards
+          projected:
+            sources:
+              {{- range $path, $_ := .Files.Glob "dashboards/*.json" }}
+              {{- $name := base $path | trimSuffix ".json" }}
+              - configMap:
+                  name: {{ include "grafana.fullname" $ }}-dashboard-{{ $name }}
+              {{- end }}
+
