--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "ng2-charts": "^8.0.0",
     "node-cron": "^4.2.1",
     "pino-pretty": "^13.1.1",
+    "plaid": "^41.0.0",
     "prom-client": "^15.1.3",
     "puppeteer": "^24.34.0",
     "reflect-metadata": "^0.2.2",
